# solana-mcp

./: README.md  main.py  pyproject.toml
app/: __init__.py
app/api/: __init__.py  solana.py
app/core/: __init__.py  config.py
app/models/: __init__.py  solana.py
app/services/: __init__.py  solana.py
docs/: getBlockTime.md  getBlocks.md  getBlocksWithLimit.md  getClusterNodes.md  getEpochInfo.md  getEpochSchedule.md  getFeeForMessage.md  getFirstAvailableBlock.md  getGenesisHash.md  getHealth.md  getHighestSnapshotSlot.md  getIdentity.md  getInflationGovernor.md  getInflationRate.md  getInflationReward.md  getLargestAccounts.md  getLatestBlockhash.md  getLeaderSchedule.md  getMaxRetransmitSlot.md  getMaxShredInsertSlot.md  getMinimumBalanceForRentExemption.md  get_account_info.md  get_balance.md  get_block.md  get_block_commitment.md  get_block_height.md  get_block_production.md  get_health.md  get_latest_blockhash.md  get_multiple_accounts.md  get_program_accounts.md  get_recent_performance_samples.md  get_recent_prioritization_fees.md  get_solana_balance.md
tests/: __init__.py  test_solana_service.py
